# crypto-strategy-analyst

./: .clawhubignore  .gitignore  CHANGELOG.md  LICENSE  MIGRATION-v0.2.0.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  example-local.yaml  example.yaml  research-600usdt.yaml
config/profiles/: bnb.yaml  btc.yaml  eth.yaml  generic.yaml  sol.yaml
references/: analysis-engine.md  asset-profiles.md  backtest-assumptions.md  backtest-rules.md  backtesting.md  evidence-register.md  output-schema.md  risk-and-execution.md  risk-rules.md  signal-scoring.md  strategy-rules.md  strategy-selection-v0.1.3.md
schemas/: analysis-report.schema.json
scripts/: analyze_market.py  calculate_indicators.py  calculate_position.py  detect_levels.py  detect_market_structure.py  fetch_market_data.py  generate_report.py  generate_signal.py  run_backtest.py
src/crypto_strategy_analyst/: __init__.py  account.py  adaptive_signal.py  analysis.py  backtest.py  cli.py  config.py  (+22 more)
tests/: conftest.py  test_account_state.py  test_adaptive_strategy.py  test_analysis_risk.py  test_assets.py  test_backtest.py  test_cli_rendering.py  test_data_quality.py  test_dataset.py  test_engine.py  test_exchange_safety.py  test_execution_conservatism.py  test_freshness.py  test_indicators.py  test_levels.py  test_market_regime.py  test_models.py  test_no_lookahead.py  test_output_schema.py  test_pending_entry.py  test_position_sizing.py  test_profiles_config.py  test_reliability.py  test_research_protocol.py  test_risk_cli.py  test_risk_state.py  test_security.py  test_signal_rules.py  test_skill_format.py  test_storage_portfolio.py  test_strategy_consistency.py  test_time_alignment.py
(+22 files in other folders)
