[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "crypto-strategy-analyst"
version = "0.1.1"
description = "Deterministic, research-only crypto spot strategy analysis for OpenClaw"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "anpengxin"}]
keywords = ["openclaw", "cryptocurrency", "quantitative-analysis", "backtesting"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/nvnmvm/crypto-strategy-analyst"
Repository = "https://github.com/nvnmvm/crypto-strategy-analyst"
Issues = "https://github.com/nvnmvm/crypto-strategy-analyst/issues"

[project.optional-dependencies]
dev = [
  "jsonschema>=4.22,<5",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
crypto-strategy-analyst = "crypto_strategy_analyst.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_strategy_analyst"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["outputs", "logs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "RUF001"]
